[package]
name = "chip8_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1.4.3"
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.27.0"
expect-test = "1.4.1"
rand = "0.8.5"
ratatui = "0.27.0"
spin_sleep = "1.1.1"
thiserror = "1"
